tests/NormalTests/paczka2/big_fuzzy/49696966.err
Error in line 1: KOPjmKS0V S11 93,1
Error in line 2: KOPjmKS0V A603 49,8
Error in line 7: KOPjmKS0V S994 33,2
Error in line 20: S994 S994 56,4
Error in line 22: S994 S740 76,0
Error in line 33: GAMJK S740 52,8
Error in line 31: xXWuxN A603 33,9
Error in line 46: sJAj3b S740 -3,0
Error in line 42: sJAj3b S740 49,4
Error in line 48: xXWuxN S994 40,1
Error in line 51: xXWuxN A603 47,5
Error in line 58: xXWuxN S740 13,8
Error in line 57: 1SGBco S994 10,7
Error in line 71: KOPjmKS0V S740 78,6
Error in line 25: rvQVKga9i S994 20,1
Error in line 84: rvQVKga9i S740 93,3
Error in line 90: 1SGBco S11 17,40
Error in line 117: S994 S740 25,8
Error in line 130: rvQVKga9i S740 81,6
Error in line 134: 1SGBco S994 44,8
Error in line 124: KOPjmKS0V A603 67,0
Error in line 135: 1SGBco S11 90,3
Error in line 131: rvQVKga9i A603 37,1
Error in line 141: GAMJK S994 37,3
Error in line 155: KOPjmKS0V S740 1,0
Error in line 165: sJAj3b S11 95,6
Error in line 168: sJAj3b A603 92,3
Error in line 180: rvQVKga9i A603 16,6
Error in line 197: ]SGBco S740 ]25,5
Error in line 190: S994 S11 7,0
Error in line 202: S994 S994 8,6
Error in line 206: GAMJK S11 4,3
Error in line 213: rvQVKga9i S994 63,9
Error in line 221: S994 S740 57,4
Error in line 220: xXWuxN A603 154,6
Error in line 225: xXWuxN S740 71,7
Error in line 238: S994 S11 -3,3
Error in line 236: xXWuxN S11 47,6
Error in line 244: pSGBco A603 2p,5
Error in line 246: 1SGBco A603 58,5
Error in line 242: xXWuxN S740 5,3
